    * 3849 FIX: check_cpu_peaks: Fixed broken active check
    * 3870 FIX: elphase.include: more robust against none type params
    * 3801 FIX: Fixed race condition with persisted data...

    Multisite:
    * 3850 FIX: Fixed JS error when quicksearch snapin not in sidebar
    * 3871 FIX: stale services view: excluded services in downtime per default


1.2.8p10:
    Core & Setup:
    * 3843 FIX: Fixed reporting of crashes when using Nagios core
    * 3846 FIX: Nagios: define_contactgroups = False is handled correctly again

    Checks & Agents:
    * 3743 SEC: mk_jolokia: Use JSON library to parse JSON output in lieu of eval()...
            NOTE: Please refer to the migration notes!
    * 3772 FIX: ipmi_sensors: fixed missing states
    * 3562 FIX: agent_vsphere.pysphere: fixed problems related to ssl certificate validation on older distributions/python versions
    * 3782 FIX: agent_netapp: fixed exception with values containing umlauts
    * 3774 FIX: apc_symmetra: fixed wrong status and values handling
    * 3761 FIX: windows_tasks: Fixed possible exception in discovery in case of unexpected agent data
    * 3762 FIX: local: Fixed long output handling with Microcore...
    * 3764 FIX: netapp_api_vs_traffic: Fixed exception when no NFSv4 infos available
    * 3765 FIX: oracle_asm_diskgroup: Made check more robust against invalid data received from agent...
    * 3766 FIX: palo_alto_sessions: Fixed possible division by zero error
    * 3768 FIX: quantum_libsmall_door: Fixed possible exception in scan function
    * 3769 FIX: cisco_temperature: Fixed exception in case of empty SNMP data received from device
    * 3770 FIX: win_dhcp_pools: Fixed crash in case of empty DHCP pools
    * 3781 FIX: ipmi: made check more robust against incomplete datasets

    Multisite:
    * 3561 FIX: Removing a comment now also removes any linked acknowledgements...
    * 3779 FIX: availability: added validation of availability options